--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -20,9 +20,9 @@
 						<a href="#" class="btn btn__seacrh">Search</a>
 					</div>
 					<div class="socials">
-						<a href="#"><img src="img/social-first.jpg" alt="search"></a>
-						<a href="#"><img src="img/social-second.jpg" alt="facebook"></a>
-						<a href="#"><img src="img/social-third.jpg" alt="twitter"></a>
+						<a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt="search"></a>
+						<a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt="facebook"></a>
+						<a href="https://freelance.ru/iloading" target="_blank"><img src="img/flru.png" alt="twitter"></a>
 					</div>
 
 					<!-- Menu for phones under 520px -->
@@ -241,11 +241,11 @@
 	</section>
 	<footer>
 	</footer>
-</body>
+  <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="https://use.fontawesome.com/ac2bf68d1a.js"></script>
+  <script src="js/script.js"></script>
 
-<script src="js/jquery-3.5.1.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="https://use.fontawesome.com/ac2bf68d1a.js"></script>
-<script src="js/script.js"></script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+
+</body>
 </html>
