--- a/inner.html
+++ b/inner.html
@@ -21,9 +21,9 @@
 						<a href="#" class="btn btn__seacrh">Search</a>
 					</div>
 					<div class="socials">
-						<a href="#"><img src="img/social-first.jpg" alt="search"></a>
-						<a href="#"><img src="img/social-second.jpg" alt="facebook"></a>
-						<a href="#"><img src="img/social-third.jpg" alt="twitter"></a>
+						<a href="https://freelancehunt.com/freelancer/i__loading.html" target="_blank"><img src="img/fh.png" alt="search"></a>
+						<a href="https://www.fl.ru/users/vana20915/portfolio/" target="_blank"><img src="img/fl.ico" alt="facebook"></a>
+						<a href="https://freelance.ru/iloading" target="_blank"><img src="img/flru.png" alt="twitter"></a>
 					</div>
 
 					<!-- Menu for phones under 520px -->
@@ -61,9 +61,6 @@
 			</nav>			
 		</div>
 	</header>
-
-					<!-- Main content code -->
-
 	<section class="main__section">
 		<div class="container">
 			<div class="first-col">
@@ -119,8 +116,8 @@
 						<input type="text" id="website" name="user_website">
 					</div>
 					<div>
-						<label for="comment">Comment: </label>
-						<textarea type="text" id="comment" name="user_comment"></textarea>
+						<label for="comment-area">Comment: </label>
+						<textarea id="comment-area" name="user_comment"></textarea>
 					</div>
 					<button type="submit">Post comment</button>
 				</form>
@@ -261,12 +258,11 @@
 	<footer>
 			<img src="img/footer-bg.png" alt="" class="footer_bg">
 	</footer>
+  <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="https://use.fontawesome.com/ac2bf68d1a.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/script.js"></script>
+
+
 </body>
-
-
-<script src="js/jquery-3.5.1.min.js"></script>
-<script src="https://use.fontawesome.com/ac2bf68d1a.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/script.js"></script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
